tests/NormalTests/paczka1/fuzzy1/64429340.err
Error in line 4: THcY A762 60,3
Error in line 14: WfMYnubUpe A762 85,5
Error in line 10: BAghUdx A799 19,5
Error in line 16: BAghUdx A762 7,1
Error in line 27: BAghUdx A193 3,93
Error in line 25: BAghUdx A762 35,9
Error in line 28: Bld1gmJDZe9 S19 8,2
Error in line 35: WfMYnubUpe A193 65,5
Error in line 38: WfMYnubUpe S19 10,5
